<resources>
    <string name="app_name">ToDo Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete all</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="empty_image_for_recycle_view">Empty Image for recycle view</string>
    <string name="no_data">No Data</string>
    <string name="add_item">Add Item</string>

    <string-array name="Priority">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>