<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <!--<item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
-->
    <item
        android:id="@+id/menu_arrange"
        android:icon="@drawable/ic_grid"
        android:title="@string/search"
        app:showAsAction="ifRoom|withText" />


    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/sort_by">

            <menu>
                <item
                    android:id="@+id/priority_high_menu"
                    android:title="@string/priority_high" />

                <item
                    android:id="@+id/priority_low_menu"
                    android:title="@string/priority_low" />
            </menu>
        </item>

    </group>-->

    <item
        android:id="@+id/sort_by_menu"
        android:title="@string/sort_by"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all_menu"
        android:title="@string/delete_all"
        app:showAsAction="never" />

</menu>