<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mSharedViewModel"
            type="com.example.todomvvm.fragment.SharedViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.list.ListFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/no_data_iv"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:emptyDatabase="@{mSharedViewModel.emptyDatabase}"
            android:visibility="gone"
            android:contentDescription="@string/empty_image_for_recycle_view"
            app:layout_constraintBottom_toBottomOf="@+id/list_recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_no_data" />

        <TextView
            android:id="@+id/no_data_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:emptyDatabase="@{mSharedViewModel.emptyDatabase}"
            android:text="@string/no_data"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_data_iv" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:contentDescription="@string/add_item"
            android:navigateToAddFragment="@{true}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>